<resources>
    <string name="app_name">Miles Per Gallon Tracker</string>

    <!-- Menu Stuff -->
    <string name="menu_settings">Settings</string>
    <string name="menu_open_source">Attributions</string>
    <string name="menu_donate">Donate</string>

    <!-- Others -->
    <string name="action_add_car">Add A New Car</string>
    <string name="cancel">Cancel</string>
    <string name="instruct_dialog_add_new_car">This dialog helps you add a new car.</string>

    <string name="tab_dashboard">Dashboard</string>
    <string name="tab_history_table">Historical Records</string>
    <string name="tab_graphs">Graphs</string>

    <!-- Labels -->
    <string name="lbl_price_per_gallon">Price Per Gallon</string>
    <string name="lbl_gallons_taken">Gallons of Gas Taken</string>
    <string name="lbl_current_mileage_last">Current Mileage\n(Last: %,.2f)</string>
    <string name="lbl_current_mileage">Current Mileage</string>
    <string name="lbl_date_picker">When You Fueled</string>
    <string name="lbl_date_picker_last">When you fueled\n(Last: %s)</string>


    <!-- Placeholder Texts For Input Elements-->
    <string name="ph_in_model">Model (Required)</string>
    <string name="ph_in_trim">Trim (Optional)</string>
    <string name="ph_in_year">Year (Optional)</string>
    <string name="ph_in_nickname">Nickname (Optional)</string>

    <!-- Error messages -->
    <string name="err_no_mileage">Please fill out the mileage field</string>
    <string name="err_no_ppg">Please fill out price per gallon</string>
    <string name="err_no_gallons">Please fill out the gallons field</string>
    <string name="no_car_added">No Car Added</string>
    <string name="empty_model">The model field is empty. It must be filled in.</string>
    <string name="no_cars_available">There are no cars available. You should add a car using the "Add A New Car" button in the toolbar.</string>
    <string name="no_mileage_added">No Mileage Event Added</string>
    <string name="no_data_history_table">There is no data in the history table</string>


    <string name="hello_blank_fragment">No Data in fragment yet</string>
    <string name="coming_soon">Coming soon...</string>


    <!-- Open Source Licenses -->
    <string name="open_source_licenses"><![CDATA[
        <big>Open Source License</big><br/>

        <p>This product uses several open source products:</p>

        <ul>
            <li><a href="https://github.com/ISchwarz23/SortableTableView">Sortable Table View</a> - Apache 2.0</li>
            <li><a href="https://github.com/PhilJay/MPAndroidChart">MPAndroidChart</a> Apache 2.0</li>
        </ul>

        <p>This product also uses free icons.</p>

        <ul>
            <li>Diesel icon by <a href="https://www.flaticon.com/authors/surang" title="surang">surang</a> at <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></li>
            <li>Distance between points icon by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></li>
            <li>Money icon by <a href="https://www.freepik.com/" title="Freepik">Freepik</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a> is licensed by <a href="http://creativecommons.org/licenses/by/3.0/" title="Creative Commons BY 3.0" target="_blank">CC 3.0 BY</a></li>
        </ul>
    ]]>
    </string>

    <!-- stat labels on dashboard -->
    <string name="stat_mpg_lbl">Average Miles Per Gallon</string>
    <string name="stat_miles_between_fillups">Average Miles Between Fill-Ups</string>
    <string name="stat_average_cost_per_mile">Average Cost Per Mile</string>
    <string name="stat_total_miles_tracked">Total Miles Tracked</string>
    <string name="format_miles">%,.0f miles</string>
    <string name="format_cost">$ %.2f</string>
    <string name="format_mpg">%.2f mpg</string>


    <string name="def_statcard_stat_format">%f</string>
    <string name="def_statcard_description_lbl">No Stat Card Description Set</string>

    <string name="title_edit_car">Editing A Car</string>
    <string name="title_add_car">Add A New Car</string>

    <string name="f_date_range">%s to %s</string>
    <string name="f_gallon_text">%.3f gal @ $%.2f</string>
    <string name="generate_database_export">Export Database</string>
    <string name="title_activity_database_export">DatabaseExportActivity</string>


    <!-- export database activity -->
    <string name="lbl_export_format">Export Format</string>
    <string name="lbl_export_location">Where to Send</string>
    <string name="lbl_export_filename">Filename</string>
    <string name="action_export">Export Database</string>
</resources>
