<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_add_car"
        android:title="@string/action_add_car"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_edit_car"
        android:title="Edit Current Car"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_source_licenses"
        android:title="@string/menu_open_source"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_donate"
        android:title="@string/menu_donate"
        app:showAsAction="never" />

    <!-- Settings, should always be in the overflow -->
    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_generate_database_export"
        android:title="@string/generate_database_export"
        app:showAsAction="never" />
</menu>